tdf#122814 KDE5: conditional disable of Qt shortcuts

Change-Id: I5375f0b555e483b2c108550d319e64d781b96f75
Reviewed-on: https://gerrit.libreoffice.org/66673
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>